refactor: update API endpoints and request handling; improve error handling